<resources>
    <string name="app_name">Blank Spellbook</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="open_drawer_info">Open navigation drawer</string>
    <string name="close_drawer_info">Close navigation drawer</string>
    <string name="button_spellbook">SPELLBOOK</string>
    <string name="button_dailyspells">DAILY SPELLS</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">Undo</string>

    <string name="spell_details_discard_changes">Do you want to discard changes?</string>
    <string name="spell_group_not_grouped">Not grouped</string>

    <!-- strings for power list activity & fragments -->
    <string name="powerlist_confirmRemoval">Do you want to remove selected powers from this list? Note: The powers will still be available in the list of powers</string>
    <string name="action_remove">Remove</string>
    <string name="powerList_confirmRemoval_title">Confirm removal</string>
    <string name="power_list_snackbar_info">Powers removed</string>
    <string name="power_list_toast_no_powers">This power list doesn\'t have anything to show… Add something!</string>
    <string name="content_description_delete_button">Delete the selected element</string>

    <!-- Strings drawer's popup dialogs -->
    <string name="alertdialog_createspellbook">Create new spell book</string>
    <string name="createspellbook_hint">Spellbook\'s name</string>
    <string name="alertdialog_createdailypowerlist">Create new daily power list</string>
    <string name="createdailypowerlist_hint">Power List\'s name</string>
    <string name="createspellbook_create">Create</string>
    <string name="createspellbook_cancel">Cancel</string>

    <!-- strings for mainactivity & fragments -->
    <string name="mainactivity_back_button_popup_title">Confirm quit</string>
    <string name="mainactivity_back_button_popup_info">Do you want to quit?</string>
    <string name="mainactivity_filter_text">Filters</string>
    <string name="mainactivity_filter_class">Power lists:</string>
    <string name="mainactivity_filter_group">Power groups:</string>

    <!-- Strings for power details activity & Fragments -->
        <string name="title_power_details">Details</string>
        <string name="action_add_to_powerlist">Add to list of powers</string>
        <string name="action_delete_power">Delete power</string>
        <string name="deleteDialog_title">Confirm power deletion</string>
        <string name="deleteDialog_infotext">Do you want to <b>delete permanently</b> this power from storage?</string>
        <string name="deleteDialog_warningtext"><b>WARNING:</b> the power can\'t be restored once deleted</string>

        <!-- for edit text hints -->
            <string name="spellbook_attacktype">Attack type (close quarters, melee attack…)</string>
            <string name="spellbook_attackroll">Attack roll</string>
            <string name="spellbook_castingtime">Casting time</string>
            <string name="spellbook_effect">Spell\'s effect</string>
            <string name="spellbook_group">Spell\'s level or other custom group</string>
            <string name="spellbook_hitDamageFirst">Damage at first level</string>
            <string name="spellbook_hitDamageThird">Damage at third level</string>
            <string name="spellbook_hitDamageFifth">Damage at fifth level</string>
            <string name="spellbook_hitDamageSeventh">Damage at seventh level</string>
            <string name="spellbook_hitDamageNinth">Damage at ninth level</string>
            <string name="spellbook_damageEffect">Spell\'s damage or effect</string>
            <string name="spellbook_missdamage">Spell\'s miss damage or effect</string>
            <string name="spellbook_special">Special rules</string>
            <string name="spellbook_name">Spell name</string>
            <string name="spellbook_playerNotes">Notes</string>
            <string name="spellbook_rechargeTime">Recharge time</string>
            <string name="spellbook_target">Target</string>
            <string name="spellbook_trigger">Trigger for the spell or power</string>
            <string name="spellbook_adventurerFeat">Adventurer level feat</string>
            <string name="spellbook_championFeat">Champion level feat</string>
            <string name="spellbook_epicFeat">Epic level feat</string>

        <!-- for text field infos -->
            <string name="spellbook_attacktype_info">Attack type</string>

    <string name="title_activity_spell_book">SpellBookActivity</string>
    <string name="title_activity_daily_spells">DailySpellsActivity</string>

    <string name="recycler_parent_arrow_content_descriptor">Expand this level</string>

    <!-- Strings for PowerDetailsActivity & things in that package-->
    <string name="add_to_list_dialog_title">Copy the spell to</string>
    <string name="radio_button_power_list">List of known powers</string>
    <string name="radio_button_daily_power_list">List of daily powers</string>
    <string name="error_empty_fields">Add something to the fields before saving</string>
    <string name="toast_powers_copied">Powers copied to selected lists</string>



    <!-- Strings for spell list activity -->
    <string name="spellList_menu_deleteButton">Delete powers from list</string>

    <!-- toolbar -->
    <string name="toolbar_text_spells">Spells</string>
    <string name="toolbar_text_daily_power_lists">Daily Power Lists</string>
    <string name="toolbar_text_power_lists">Power Lists</string>

    <!-- Licenses, credits... -->
    <string name="add_to_list_source">https://icons8.com/web-app/8274/Add-List</string>


    <!-- activity transition strings -->
    <string name="transition_powerlist_name">powerListTransition</string>
    <string name="transition_powerDetails_name">powerDetailsNameTransition</string>


    <!-- preferences -->
    <string name="title_preferences_activity">Preferences</string>
    <string name="preferences_filter_category">Settings for power list filters</string>
    <string name="preferences_filter_by_cross_section">myPreferencesFilterByCrossSection</string>
    <string name="preferences_filter_by_cross_section_title">Filter powers by cross section</string>
    <string name="preferences_filter_by_cross_section_summary">Toggle on to show powers that satisfy both of the filters. Toggle off to show powers that satisfy any of the filters.</string>


    <!-- numeric values not displayed for user -->

</resources>
